--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@formspree/react": "^3.0.0",
+    "@tailwindcss/postcss": "^4.1.12",
     "next": "15.2.1",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
